--- a/CEOL-newsletter1.html
+++ b/CEOL-newsletter1.html
@@ -96,7 +96,7 @@
                             <td height="40"></td>
                         </tr>
                         <tr>
-                            <td width="225" height="45" valign="top" align="left" style="margin:0px; padding:0px; color:#f77243; font-size:45px; font-style:italic; font-weight: bold; text-transform:capitalize; text-align: center; font-family: 'Open Sans', sans-serif; line-height:15px;" valign="top">
+                            <td width="225" height="45" valign="top" align="left" style="margin:0px; padding:0px; color:#f77243; font-size:45px; font-style:italic; font-weight: bold;  text-align: center; font-family: 'Open Sans', sans-serif; line-height:15px;" valign="top">
                             Dica de saúde
                             </td>
                         </tr>
@@ -104,10 +104,10 @@
                             <td height="15"></td>
                         </tr>
 						<tr>
-                            <td colspan="2" width="600" valign="top" align="left" data-size="Description" data-color="Description" data-min="12" data-max="17" style="margin:0px; padding:0px; color:#757575; font-size:15px; font-weight:400; font-style:italic; font-family: 'Open Sans', sans-serif; line-height:24px;">
-                                <p>As alergias estão presentes na vida de muita gente, mas alguns cuidados ajudam a  manter sua casa mais protegida: </p>
+                            <td colspan="2" width="600" valign="top" align="left" data-size="Description"  data-min="12" data-max="17" style="margin:0px; padding:0px; color:#757575; font-size:15px; font-weight:400; font-family: 'Open Sans', sans-serif; line-height:24px;">
+                                <p>As alergias estão presentes na vida de muita gente, mas alguns cuidados ajudam a  manter sua casa mais protegida:</p>
                                 <li>Deixe a casa bem arejada para evitar o acúmulo de poeira, pelos e sujeiras que podem permitir o surgimento de ácaros e fungos;</li>
-                                <li>Evite o uso de vassouras e espanadores. Eles espalham e levantam o pó, piorando a alergia. Prefira o aspirador de pó e panos úmidos; </li>
+                                <li>Evite o uso de vassouras e espanadores. Eles espalham e levantam o pó, piorando a alergia. Prefira o aspirador de pó e panos úmidos;</li>
                                 <li>Limpe as narinas com soro fisiológico para deixar as vias respiratórias limpas;</li>
                                 <li>Substitua produtos de limpeza com cheiros fortes por detergente biodegradável e álcool;</li>
                                 <li>Cuidado com mofo em locais úmidos e que têm contato com água, eles permitem a proliferação de fungos. Limpe esses lugares com água sanitária.</li>
@@ -125,7 +125,7 @@
 <table  align="center" border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff" width="900" style="border-collapse:collapse;" >
 	<tbody>
 		<tr>
-			<td width="100%" align="center" content class="editable">
+			<td width="100%" align="center" content >
 				<table align="center" border="0" cellpadding="0" cellspacing="0" width="800">
 					<tbody>
 						<tr>
@@ -136,37 +136,37 @@
 								<table align="top" cellpadding="0" cellspacing="0" border="0" width="100%" valign="top">
 									<tbody>
 										<tr>
-											<td align="top" class="display-block" width="290" valign="top">
+											<td align="top" class="display-block" width="275" valign="top">
 												<table align="top" cellpadding="0" cellspacing="0" border="0" width="100%">
 													<tbody valign="top">
 														<tr>
 															<td width="100%" height="27" style="line-height:1px;" valign="top"></td>
 														</tr>
 														<tr>
-															<td width="225" height="45" valign="top" align="left" style="margin:0px; padding:0px; color:#000000; font-size:25px; font-style:italic; font-weight: bold; text-transform:capitalize; font-family: 'Open Sans', sans-serif; line-height:15px;" valign="top">Saúde e tecnologia  </td>
+															<td width="225" height="45" valign="top" align="left" style="margin:0px; padding:0px; color:#000000; font-size:25px; font-style:italic; font-weight: bold;  font-family: 'Open Sans', sans-serif; line-height:15px;" valign="top">Saúde e tecnologia  </td>
 														</tr>
 														<tr>
-															<td colspan="2" width="179" height="109" valign="top" align="left" data-size="Description" data-color="Description" data-min="12" data-max="17" style="margin:0px; padding:0px; color:#757575; font-size:15px; font-weight:400; font-style:italic; font-family: 'Open Sans', sans-serif; line-height:24px;">
-                                                                <p>Ouvir bem contribui para desenvolver a habilidade de interação social. Para quem tem surdez severa ou profunda, o implante coclear devolve a capacidade de ouvir. Ele é recomendado para pacientes que não podem se beneficiar de aparelhos auditivos tradicionais porque a amplificação do som não é capaz de causar nenhum estímulo auditivo.   </p>
+															<td colspan="2" width="179" height="109" valign="top" align="left" data-size="Description"  data-min="12" data-max="17" style="margin:0px; padding:0px; color:#757575; font-size:15px; font-weight:400; font-style:italic; font-family: 'Open Sans', sans-serif; line-height:24px;">
+                                                                <p>Ouvir bem contribui para desenvolver a habilidade de interação social. Para quem tem surdez severa ou profunda, o implante coclear devolve a capacidade de ouvir. Ele é recomendado para pacientes que não podem se beneficiar de aparelhos auditivos tradicionais porque a amplificação do som não é capaz de causar nenhum estímulo auditivo. </p>
                                                                 <p>A cirurgia de implantação dura cerca de 2 horas com um pequeno corte atrás da orelha, onde é instalado o aparelho que estimula o nervo auditivo e recria as sensações sonoras, fazendo o trabalho da parte danificada da orelha interna. Após a operação, o paciente precisa aprender – ou reaprender –  a ouvir.</p>
                                                                 </td>
 														</tr>
 													</tbody>
 												</table>
 											</td>
-                                            <td width="20"></td>
-											<td width="290" valign="top">
+                                            <td width="50"></td>
+											<td width="275" valign="top">
 												<table cellpadding="0" cellspacing="0" border="0" width="100%" valign="top">
 													<tbody>
 														<tr>
 															<td width="100%" height="27" style="line-height:1px;"></td>
 														</tr>
 														<tr>
-															<td width="225" height="45" valign="top" align="left" style="margin:0px; padding:0px; color:#000000; font-size:25px; font-style:italic; font-weight: bold; text-transform:capitalize; font-family: 'Open Sans', sans-serif; line-height:15px;" valign="top">Encontre aqui!</td>
+															<td width="225" height="45" valign="top" align="left" style="margin:0px; padding:0px; color:#000000; font-size:25px; font-style:italic; font-weight: bold;  font-family: 'Open Sans', sans-serif; line-height:15px;" valign="top">Encontre aqui!</td>
 														</tr>
 														<tr>
-															<td colspan="2" width="179" height="109" valign="top" align="left" data-size="Description" data-color="Description" data-min="12" data-max="17" style="margin:0px; padding:0px; color:#757575; font-size:15px; font-weight:400; font-style:italic; font-family: 'Open Sans', sans-serif; line-height:24px;">
-                                                                <p>Você tem problemas de rouquidão? NO CEOL Otorrino é possível fazer a estroboscopia, o exame mais completo para avaliar este problema. Ele é indicado para doenças que apresentam disfonias (alteração de voz) ou afonias (perda total da voz). O exame dura cerca de 30 minutos, é indolor e fácil de ser realizado. Através dele pode-se ver em detalhes a vibração das pregas vocais.   </p>
+															<td colspan="2" width="179" height="109" valign="top" align="left" data-size="Description"  data-min="12" data-max="17" style="margin:0px; padding:0px; color:#757575; font-size:15px; font-weight:400; font-style:italic; font-family: 'Open Sans', sans-serif; line-height:24px;">
+                                                                <p>Você tem problemas de rouquidão? NO CEOL Otorrino é possível fazer a estroboscopia, o exame mais completo para avaliar este problema. Ele é indicado para doenças que apresentam disfonias (alteração de voz) ou afonias (perda total da voz). O exame dura cerca de 30 minutos, é indolor e fácil de ser realizado. Através dele pode-se ver em detalhes a vibração das pregas vocais.</p>
                                                                 <p>Profissionais que utilizam frequentemente a voz, como professores, radialistas e operadores de telemarketing precisam realizar o exame periodicamente para prevenir e detectar doenças relacionadas à voz de modo precoce.</p>
                                                             </td>
 														</tr>
@@ -186,6 +186,30 @@
 			</td>
 		</tr>
 	</tbody>
+</table>
+<table  align="center" border="0" cellpadding="0" cellspacing="0" bgcolor="#f0f0f0" width="900" style="border-collapse:collapse;" >
+	<tbody>
+		<tr>
+			<td width="100%" align="center">
+				<table align="center" border="0" cellpadding="0" cellspacing="0" width="800">
+					<tbody>
+						<tr>
+							<td width="100%" height="30"> <!-- asas --> </td>
+						</tr>
+                        <tr>
+                            <td valign="top" align="left" style="margin:0px; padding:0px; color:#f77243; font-size:30px; font-style:italic; font-weight: bold;  text-align: center; font-family: 'Open Sans', sans-serif; line-height:35px; text-align:center;" valign="top">Dificuldades no ensino pode estar ligado a <br> problemas de audição</td>
+                        </tr>
+                        <tr>
+                            <td valign="top" align="left" style="margin:0px; padding:0px; color:#757575; font-size:15px; font-weight:400; font-style:italic; font-family: 'Open Sans', sans-serif; line-height:24px;">
+                                <p>É na escola que, muitas vezes, são percebidos os primeiros sinais de problemas auditivos em crianças, já que processo de aprendizagem depende em grande parte da audição. Mesmo que possua o sistema auditivo completo, a criança pode sofrer do Transtorno do Processamento Auditivo Central (TPAC), ou seja, a dificuldade do cérebro em compreender os sons.</p>
+                                <p>A concentração, memorização, aprendizagem, leitura, escrita e troca de fonemas são algumas das dificuldades que podem aparecer associadas a esse problema. Segundo Jasmin Guzman, fonoaudióloga do CEOL Otorrino, o baixo rendimento escolar é um dos sintomas do TPAC. “Pais e professores devem ficar atentos.” </p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </td>
+        </tr>
+    </tbody>
 </table>
 <!--	<table align="center" border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff" width="900" >
 		<tbody>
@@ -221,7 +245,7 @@
 																								<td width="100%" valign="top" height="28" align="left" data-size="Post Title" data-color="Post Title" data-min="10" data-max="16" style="margin:0px; padding:0px; color:#f77243; font-size:13px; font-weight:400; text-transform:uppercase; font-family: 'Open Sans', sans-serif; line-height:13px;">abril 2018</td>
 																							</tr>
 																							<tr>
-																								<td width="100%" height="145" valign="middle" align="left" data-size="Description" data-color="Description" data-min="10" data-max="16" style="margin:0px; padding:0px; color:#333333; font-size:14px; font-weight:400; font-family: 'Open Sans', sans-serif; line-height:24px;">São mais de 50 convênios </td>
+																								<td width="100%" height="145" valign="middle" align="left" data-size="Description"  data-min="10" data-max="16" style="margin:0px; padding:0px; color:#333333; font-size:14px; font-weight:400; font-family: 'Open Sans', sans-serif; line-height:24px;">São mais de 50 convênios </td>
 																							</tr>
 																						</tbody>
 																					</table>
@@ -254,7 +278,7 @@
 	</tbody>
 </table>-->
 </table>
-<table  align="center" border="0" cellpadding="0" cellspacing="0" width="900" style="border-collapse: collapse;" bgcolor="#a35c44" >
+<table  align="center" border="0" cellpadding="0" cellspacing="0" width="900" style="border-collapse: collapse;" bgcolor="#f77243" >
 	<tbody>
 		<tr>
 			<td width="100%" height="50" style="line-height:1px;"></td>
@@ -302,8 +326,7 @@
 							<td colspan="2" width="100%" height="25" style="line-height:1px;"></td>
 						</tr>
 						<tr>
-							<td  width="400" height="25" align="left" valign="middle" data-size="Copyrights" data-color="Copyrights" data-min="10" data-max="18" style="margin:0px; padding:0px; font-size:13px; color:#FFFFFF; font-family: 'Open Sans', sans-serif; font-weight:normal; line-height:24px;" >© Copyright 2018 - CEOL Otorrino. Todos os direitos reservados. </td>
-							<td  width="200" height="25" align="right" valign="middle" data-size="Unsubscribe" data-min="10" data-max="18" style="margin:0px; padding:0px; font-size:13px; color:#333333; font-family: 'Open Sans', sans-serif; font-weight:700; line-height:24px;"><a href="sr_unsubscribe" data-color="Unsubscribe" style="text-decoration:none; color:#FFFFFF;">Unsubscribe</a></td>
+							<td  width="400" height="25" align="left" valign="middle" data-size="Copyrights" data-color="Copyrights" data-min="10" data-max="18" style="margin:0px; padding:0px; font-size:13px; color:#FFFFFF; font-family: 'Open Sans', sans-serif; font-weight:normal; line-height:24px;">© Copyright 2018 - CEOL Otorrino. Todos os direitos reservados. </td>
 						</tr>
 					</tbody>
 				</table>
