--- a/CEOL-newsletter1.html
+++ b/CEOL-newsletter1.html
@@ -5,14 +5,14 @@
         </tr>
 		<tr>
 			<td width="100%" align="center" valign="middle">
-				<table  cellpadding="0" cellspacing="0" border="0" width="600" height="56" style="border-collapse:collapse">
+				<table  cellpadding="0" cellspacing="0" border="0" width="600" height="120" style="border-collapse:collapse">
 					<tbody>
 						<tr>
 							<td  width="200" valign="middle" align="left">
-								<table align="center" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse:collapse" height="56">
+								<table align="center" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse:collapse" height="120">
 									<tbody>
 										<tr>
-											<td  height="56" valign="middle" align="left" style="line-height:1px;">
+											<td  height="120" valign="middle" align="left" style="line-height:1px;">
 												<a href="http://www.ceol.med.br" target="_blank" style=""><img  src="http://souzaty.com/ceol/ceol-logo.png" border="0" width="155" height="89" alt="Logo" title="Logo" style="display:block;" ></a>
 											</td>
 										</tr>
@@ -20,33 +20,16 @@
 								</table>
 							</td>
 							<td  width="200" align="center" style="line-height:1px;">
-								<table cellpadding="0" cellspacing="0" border="0" align="center" height="56">
+								<table cellpadding="0" cellspacing="0" border="0" align="center" height="120">
 									<tbody>
 										<tr>
-											<td align="center" valign="middle" data-size="Browser View 1" data-min="10" data-max="18" style="margin:0px; padding:0px; text-transform:uppercase; font-size:14px; font-family: 'Open Sans', sans-serif; font-weight:400;" ><br></td>
+											<td align="center" valign="middle" data-size="Browser View 1"   style="margin:0px; padding:0px; text-transform:uppercase; font-size:14px; font-family: 'Open Sans', sans-serif; font-weight:400;" ><br></td>
 										</tr>
 									</tbody>
 								</table>
 							</td>
 							<td  width="200" valign="middle" align="left">
-								<table  align="center" cellpadding="0" cellspacing="0" border="0" height="56" width="100%" style="border-collapse:collapse">
-									<tbody>
-										<tr>
-											<td  width="200" height="56" style="line-height:1px;">
-												<table  cellpadding="0" cellspacing="0" border="0" style="border-collapse:collapse">
-													<tbody>
-														<tr>
-															<td  width="50" height="2"></td>
-															<td width="23" height="20" align="center" valign="middle" style="line-height:1px;"><a     href="https://www.facebook.com/"><img  src="http://www.graycellsweb.in/e-newsletter/all-in-one/images/facebook-black.png" border="0" width="11" height="17" alt="facebook" title="facebook" style="display:block;"></a></td>
-															<td width="30" height="20" align="center" valign="middle" style="line-height:1px;"><a href="#" style="text-decoration:none;"><img  src="https://www.batranovelties.com/media/wysiwyg/whatsappicon.png" border="0" width="20" height="20" alt="linkedin" title="linkedin" style="display:block;"></a></td>
-															<td width="30" height="20" align="right" valign="bottom" style="line-height:1px;"><a href="https://www.instagram.com/ceol_otorrino_oficial/" target="_blank"><img      src="http://souzaty.com/ceol/instagram.png" alt="Instagram" title="Instagram" width="20" height="20" border="0" style="display: block;"></a></td>
-														</tr>
-													</tbody>
-												</table>
-											</td>
-										</tr>
-									</tbody>
-								</table>
+								<img src="http://www.caadf.org.br/email/redes.png" alt="">
 							</td>
 						</tr>
 					</tbody>
@@ -96,7 +79,7 @@
                             <td height="40"></td>
                         </tr>
                         <tr>
-                            <td width="225" height="45" valign="top" align="left" style="margin:0px; padding:0px; color:#f77243; font-size:45px; font-style:italic; font-weight: bold;  text-align: center; font-family: 'Open Sans', sans-serif; line-height:15px;" valign="top">
+                            <td width="225" height="45" valign="top" align="left" style="margin:0px; padding:0px; color:#f77243; font-size:45px;  font-weight: bold;  text-align: center; font-family: 'Open Sans', sans-serif; line-height:15px;" valign="top">
                             Dica de saúde
                             </td>
                         </tr>
@@ -143,10 +126,10 @@
 															<td width="100%" height="27" style="line-height:1px;" valign="top"></td>
 														</tr>
 														<tr>
-															<td width="225" height="45" valign="top" align="left" style="margin:0px; padding:0px; color:#000000; font-size:25px; font-style:italic; font-weight: bold;  font-family: 'Open Sans', sans-serif; line-height:15px;" valign="top">Saúde e tecnologia  </td>
+															<td width="225" height="45" valign="top" align="left" style="margin:0px; padding:0px; color:#000000; font-size:25px;  font-weight: bold;  font-family: 'Open Sans', sans-serif; line-height:15px;" valign="top">Saúde e tecnologia  </td>
 														</tr>
 														<tr>
-															<td colspan="2" width="179" height="109" valign="top" align="left" data-size="Description"  data-min="12" data-max="17" style="margin:0px; padding:0px; color:#757575; font-size:15px; font-weight:400; font-style:italic; font-family: 'Open Sans', sans-serif; line-height:24px;">
+															<td colspan="2" width="179" height="109" valign="top" align="left" data-size="Description"  data-min="12" data-max="17" style="margin:0px; padding:0px; color:#757575; font-size:15px; font-weight:400;  font-family: 'Open Sans', sans-serif; line-height:24px;">
                                                                 <p>Ouvir bem contribui para desenvolver a habilidade de interação social. Para quem tem surdez severa ou profunda, o implante coclear devolve a capacidade de ouvir. Ele é recomendado para pacientes que não podem se beneficiar de aparelhos auditivos tradicionais porque a amplificação do som não é capaz de causar nenhum estímulo auditivo. </p>
                                                                 <p>A cirurgia de implantação dura cerca de 2 horas com um pequeno corte atrás da orelha, onde é instalado o aparelho que estimula o nervo auditivo e recria as sensações sonoras, fazendo o trabalho da parte danificada da orelha interna. Após a operação, o paciente precisa aprender – ou reaprender –  a ouvir.</p>
                                                                 </td>
@@ -162,10 +145,10 @@
 															<td width="100%" height="27" style="line-height:1px;"></td>
 														</tr>
 														<tr>
-															<td width="225" height="45" valign="top" align="left" style="margin:0px; padding:0px; color:#000000; font-size:25px; font-style:italic; font-weight: bold;  font-family: 'Open Sans', sans-serif; line-height:15px;" valign="top">Encontre aqui!</td>
+															<td width="225" height="45" valign="top" align="left" style="margin:0px; padding:0px; color:#000000; font-size:25px;  font-weight: bold;  font-family: 'Open Sans', sans-serif; line-height:15px;" valign="top">Encontre aqui!</td>
 														</tr>
 														<tr>
-															<td colspan="2" width="179" height="109" valign="top" align="left" data-size="Description"  data-min="12" data-max="17" style="margin:0px; padding:0px; color:#757575; font-size:15px; font-weight:400; font-style:italic; font-family: 'Open Sans', sans-serif; line-height:24px;">
+															<td colspan="2" width="179" height="109" valign="top" align="left" data-size="Description"  data-min="12" data-max="17" style="margin:0px; padding:0px; color:#757575; font-size:15px; font-weight:400;  font-family: 'Open Sans', sans-serif; line-height:24px;">
                                                                 <p>Você tem problemas de rouquidão? NO CEOL Otorrino é possível fazer a estroboscopia, o exame mais completo para avaliar este problema. Ele é indicado para doenças que apresentam disfonias (alteração de voz) ou afonias (perda total da voz). O exame dura cerca de 30 minutos, é indolor e fácil de ser realizado. Através dele pode-se ver em detalhes a vibração das pregas vocais.</p>
                                                                 <p>Profissionais que utilizam frequentemente a voz, como professores, radialistas e operadores de telemarketing precisam realizar o exame periodicamente para prevenir e detectar doenças relacionadas à voz de modo precoce.</p>
                                                             </td>
@@ -191,19 +174,39 @@
 	<tbody>
 		<tr>
 			<td width="100%" align="center">
-				<table align="center" border="0" cellpadding="0" cellspacing="0" width="800">
+				<table align="center" border="0" cellpadding="0" cellspacing="0" width="635">
 					<tbody>
 						<tr>
+							<td height="30"> <!-- asas --> </td>
+						</tr>
+                        <tr>
+                            <td valign="top" align="left" style="margin:0px; padding:0px; color:#f77243; font-size:30px;  font-weight: bold;  text-align: center; font-family: 'Open Sans', sans-serif; line-height:35px; text-align:center;" valign="top">Dificuldades no ensino pode estar ligado <br> a problemas de audição</td>
+                        </tr>
+                        <tr>
 							<td width="100%" height="30"> <!-- asas --> </td>
 						</tr>
                         <tr>
-                            <td valign="top" align="left" style="margin:0px; padding:0px; color:#f77243; font-size:30px; font-style:italic; font-weight: bold;  text-align: center; font-family: 'Open Sans', sans-serif; line-height:35px; text-align:center;" valign="top">Dificuldades no ensino pode estar ligado a <br> problemas de audição</td>
-                        </tr>
-                        <tr>
-                            <td valign="top" align="left" style="margin:0px; padding:0px; color:#757575; font-size:15px; font-weight:400; font-style:italic; font-family: 'Open Sans', sans-serif; line-height:24px;">
-                                <p>É na escola que, muitas vezes, são percebidos os primeiros sinais de problemas auditivos em crianças, já que processo de aprendizagem depende em grande parte da audição. Mesmo que possua o sistema auditivo completo, a criança pode sofrer do Transtorno do Processamento Auditivo Central (TPAC), ou seja, a dificuldade do cérebro em compreender os sons.</p>
+                            <td valign="top" align="left" style="margin:0px; padding:0px; color:#757575; font-size:15px; font-weight:400; font-family: 'Open Sans', sans-serif; line-height:24px; text-align: center;">
+                                <p>É na escola que, muitas vezes, são percebidos os primeiros sinais de problemas auditivos em crianças, já que processo de aprendizagem depende em grande parte da audição. Mesmo que possua o sistema auditivo completo, a criança pode sofrer do Transtorno do Processamento Auditivo Central (TPAC), ou seja, a dificuldade do cérebro em <br> compreender os sons.</p>
                                 <p>A concentração, memorização, aprendizagem, leitura, escrita e troca de fonemas são algumas das dificuldades que podem aparecer associadas a esse problema. Segundo Jasmin Guzman, fonoaudióloga do CEOL Otorrino, o baixo rendimento escolar é um dos sintomas do TPAC. “Pais e professores devem ficar atentos.” </p>
                             </td>
+                        </tr>
+                        <tr>
+                            <td height="25"></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <table align="center" border="0" cellpadding="0" cellspacing="0" width="250">
+                                    <tr>
+                                        <td>
+                                            <a style="display: block; width:150px; background:#f77243; padding: 5px 20px; color:#fff; text-decoration: none; text-align: center; font-family: 'Open Sans', sans-serif; font-weight:bold;" href="http://www.ceol.med.br/dificuldade-no-ensino-pode-estar-ligado-a-problemas-de-audicao/ ">SAIBA MAIS</a>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td width="100%" height="30"></td>
                         </tr>
                     </tbody>
                 </table>
@@ -211,78 +214,22 @@
         </tr>
     </tbody>
 </table>
-<!--	<table align="center" border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff" width="900" >
-		<tbody>
-			<tr>
-				<td valign="top">
-					<table align="center" border="0" cellpadding="0" bgcolor="#CCCCCC" cellspacing="0" width="900" background="http://souzaty.com/ceol/banner-convenios.jpg" style="background-image:url(images/banner-convenios.jpg); background-position:center; background-repeat:no-repeat; background-size:cover;">
-						<tbody>
-							<tr>
-								<td>
-									<table cellpadding="0" cellspacing="0" border="0" height="100%">
-										<tbody>
-											<tr>
-												<td width="500" style="line-height:1px;"></td>
-												<td width="300" valign="top" align="center" style="line-height:1px;">
-													<table cellpadding="0" cellspacing="0" border="0" width="100%" height="100%" background="http://www.graycellsweb.in/e-newsletter/all-in-one/images/meet-background-overlay-img2.png" style="background-image:url(http://www.graycellsweb.in/e-newsletter/all-in-one/images/meet-background-overlay-img2.png); background-position:center; background-repeat:no-repeat; background-size:cover;">
-														<tbody>
-															<tr>
-																<td colspan="3" width="100%" height="59" style="line-height:1px;"></td>
-															</tr>
-															<tr>
-																<td width="100%">
-																	<table cellpadding="0" cellspacing="0" border="0">
-																		<tbody>
-																			<tr>
-																				<td width="40" style=" line-height:1px;"></td>
-																				<td width="220">
-																					<table cellpadding="0" cellspacing="0" border="0">
-																						<tbody>
-																							<tr>
-																								<td width="100%" height="25" valign="top" align="left" data-size="Meet Name" data-color="Meet Name" data-min="10" data-max="16" style="margin:0px; padding:0px; color:#333333; font-size:14px; font-weight:700; text-transform:uppercase; font-family: 'Open Sans', sans-serif; line-height:14px;">Nossos Convênios</td>
-																							</tr>
-																							<tr>
-																								<td width="100%" valign="top" height="28" align="left" data-size="Post Title" data-color="Post Title" data-min="10" data-max="16" style="margin:0px; padding:0px; color:#f77243; font-size:13px; font-weight:400; text-transform:uppercase; font-family: 'Open Sans', sans-serif; line-height:13px;">abril 2018</td>
-																							</tr>
-																							<tr>
-																								<td width="100%" height="145" valign="middle" align="left" data-size="Description"  data-min="10" data-max="16" style="margin:0px; padding:0px; color:#333333; font-size:14px; font-weight:400; font-family: 'Open Sans', sans-serif; line-height:24px;">São mais de 50 convênios </td>
-																							</tr>
-																						</tbody>
-																					</table>
-																				</td>
-																				<td width="40" style=" line-height:1px;"></td>
-																			</tr>
-																		</tbody>
-																	</table>
-																</td>
-															</tr>
-															<tr>
-																<td colspan="3" width="100%" height="59" style="line-height:1px;"></td>
-															</tr>
-														</tbody>
-													</table>
-												</td>
-											</tr>
-										</tbody>
-									</table>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-				</td>
-			</tr>
-		</tbody>
-	</table>
-	</td>
-	</tr>
-	</tbody>
-</table>-->
+<!-- rodape -->
 </table>
 <table  align="center" border="0" cellpadding="0" cellspacing="0" width="900" style="border-collapse: collapse;" bgcolor="#f77243" >
 	<tbody>
 		<tr>
-			<td width="100%" height="50" style="line-height:1px;"></td>
+			<td width="100%" height="30" style="line-height:1px;"></td>
 		</tr>
+        <tr>
+            <td width="100%" align="center" valign="middle" style="margin:0px; padding:0px; font-size:14px; font-family: 'Open Sans', sans-serif; font-weight:normal; color:#fff; line-height: 20px;" >
+                Marque uma consulta (tel) 3346-4312 | (whatsapp) 99297-6762. <br />
+                <b>Atendemos mais de 50 convênios <a href="http://www.ceol.med.br/convenios/" style="color:#fff; text-decoration:underline">confira</a></b>.
+            </td>
+        </tr>
+        <tr>
+            <td height="15"></td>
+        </tr>
 		<tr>
 			<td width="100%" align="center" valign="middle"  >
 				<table  align="center" border="0" cellpadding="0" width="600" cellspacing="0" style="border-collapse:collapse;">
@@ -313,7 +260,7 @@
 							<td colspan="2" width="100%" height="1" bgcolor="#FFFFFF" data-bgcolor="Border Color" style="line-height: 1px; background-color: rgb(255, 255, 255);"></td>
 						</tr>
 						<tr>
-							<td colspan="2" width="100%" height="49" align="center" valign="middle" data-size="Menu" data-min="10" data-max="18" style="margin:0px; padding:0px; font-size:14px; font-family: 'Open Sans', sans-serif; font-weight:normal;" >
+							<td colspan="2" width="100%" height="49" align="center" valign="middle"    style="margin:0px; padding:0px; font-size:14px; font-family: 'Open Sans', sans-serif; font-weight:normal;" >
 								<span href="http://www.ceol.med.br" data-color="Address" style="color:#FFFFFF;"  >SEPS 715/915, Ed Pacini, Bloco D, térreo - Asa Sul, Brasília - DF, 70390-155. &nbsp;</span><br />
 								<a href="http://www.ceol.med.br" data-color="Contact 1" style="text-decoration: none; color: rgb(255, 255, 255); font-weight: 700;"  >(61) 3346-4312&nbsp;&nbsp;</a>
 								<a href="http://www.ceol.med.br" data-color="Contact 2" style="text-decoration: none; color: rgb(255, 255, 255); outline-width: 0px !important; user-select: auto !important;"  >contact@ceol.med.br</a>
@@ -326,7 +273,7 @@
 							<td colspan="2" width="100%" height="25" style="line-height:1px;"></td>
 						</tr>
 						<tr>
-							<td  width="400" height="25" align="left" valign="middle" data-size="Copyrights" data-color="Copyrights" data-min="10" data-max="18" style="margin:0px; padding:0px; font-size:13px; color:#FFFFFF; font-family: 'Open Sans', sans-serif; font-weight:normal; line-height:24px;">© Copyright 2018 - CEOL Otorrino. Todos os direitos reservados. </td>
+							<td  width="400" height="25" align="left" valign="middle" data-size="Copyrights" data-color="Copyrights"   style="margin:0px; padding:0px; font-size:13px; color:#FFFFFF; font-family: 'Open Sans', sans-serif; font-weight:normal; line-height:24px;">© Copyright 2018 - CEOL Otorrino. Todos os direitos reservados. </td>
 						</tr>
 					</tbody>
 				</table>
