--- a/CEOL-newsletter1.html
+++ b/CEOL-newsletter1.html
@@ -29,7 +29,7 @@
 								</table>
 							</td>
 							<td  width="200" valign="middle" align="left">
-								<img src="http://www.caadf.org.br/email/redes.png" alt="">
+								<img src="http://www.caadf.org.br/email/redes-2.png" alt="">
 							</td>
 						</tr>
 					</tbody>
