--- a/sbra-news.html
+++ b/sbra-news.html
@@ -261,7 +261,7 @@
 						</tr>
 						<tr>
 							<td colspan="2" width="100%" height="49" align="center" valign="middle" data-size="Menu" data-min="10" data-max="18" style="margin:0px; padding:0px; font-size:14px; font-family: 'Open Sans', sans-serif; font-weight:normal;">
-								<span href="#" data-color="Address" style="color:#FFFFFF;">secretariavirtual@sbra.com.br &nbsp;</span>
+								<span href="#" data-color="Address" style="color:#FFFFFF;"><a href="#" data-color="Contact 1" style="text-decoration:none; color:#FFFFFF; font-weight: 400;">secretariavirtual@sbra.com.br</a> &nbsp;</span>
 								<a href="#" data-color="Contact 1" style="text-decoration:none; color:#FFFFFF; font-weight: 700;">(61) 3225-0019 | (61) 9.8419.0385 &nbsp;</a>
 
 							</td>
@@ -270,10 +270,10 @@
 							<td colspan="2" width="100%" height="1" bgcolor="#FFFFFF" data-bgcolor="Border Color" style="line-height:1px;"></td>
 						</tr>
                         <tr>
-                            <td width="50%" height="49" align="right" valign="middle" style="line-height:1px;">
+                            <td width="40%" height="49" align="right" valign="middle" style="line-height:1px;">
                                 <a href="http://www.facebook.com.br/SBRAssistida" target="_blank"><img editable="true" src="http://www.graycellsweb.in/e-newsletter/all-in-one/images/Contact-us-6-facebook.png" alt="Facebook" title="Facebook" width="28" height="28" border="0" style="display: block;"></a>  &nbsp; &nbsp;
                             </td>
-                            <td colspan="" width="50%" height="49" align="left" valign="middle" data-size="Menu" data-min="10" data-max="18" style="margin:0px; padding:0px; font-size:18px; font-family: 'Open Sans', sans-serif; font-weight:bold;">
+                            <td colspan="" width="60%" height="49" align="left" valign="middle" data-size="Menu" data-min="10" data-max="18" style="margin:0px; padding:0px; font-size:18px; font-family: 'Open Sans', sans-serif; font-weight:bold;">
                                 <a href="http://sbra.com.br/associe-se/" data-color="Contact 2" style="text-decoration:none; color:#FFFFFF;">&nbsp; &nbsp; ASSOCIE-SE</a>
                             </td>
 
